--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>トピックを編集する</h2>
-
+<div class="row" style="background-color:white;border:1px solid #ddd;border-bottom:0;">
 <%= render 'form' %>
-
+</div>
 <%= link_to '>>詳細画面', @topic %> |
 <%= link_to '戻る', topics_path %>
