--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -1,9 +1,9 @@
    <% if @excess == true %>
-    <%= link_to topic_comments_path(topic.id, hideflg: 0), :remote => true do %>
+    <%= link_to topic_comments_path(topic.id, hide_c: 1), :remote => true do %>
     <i class="fa-lg fa fa-chevron-down faColor"></i>全てのコメントを表示する
     <% end %>
   <% elsif comments.length > 2 %>
-    <%= link_to topic_comments_path(topic.id, hideflg: 1), :remote => true do %>
+    <%= link_to topic_comments_path(topic.id, hide_c: 0), :remote => true do %>
     <i class="fa-lg fa fa-chevron-up faColor"></i>最新の2件のみ表示
     <% end %>
   <% end %>
@@ -13,7 +13,7 @@
 
   <div class="row" style="padding:5px;">
     <div class="col-sm-1 control-label" style="padding:3px 0 0 25px;">
-      <%= profile_img_ratio(comment.user, 30, 30) %>
+      <%= profile_img_width(comment.user, 30) %>
     </div>
     <div class="col-sm-3 dropdown">
       <%= comment.user.name %>
