--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,5 +1,4 @@
-<h2>Resend confirmation instructions</h2>
-
+<h2>ユーザ登録確認メールの再送</h2>
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
@@ -9,8 +8,8 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
+    <%= f.submit "ユーザ登録確認メールの再送する" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= link_to ">>アカウント新規登録", new_registration_path(resource_name) %><br>
