--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,12 +1,16 @@
-<h2>アカウント情報編集 <%= resource_name.to_s.humanize %></h2>
+<h2>アカウント情報編集</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
-
+  
+  <% if current_user.provider == "twitter" %>
+  <% else %>
   <div class="form-group">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, class: "form-control" %>
+    <%= current_user.email %>
   </div>
+  <% end %>
+  <%= f.hidden_field :email %>
   
   <div class="form-group">
     <%= f.label :name %><br />
@@ -31,12 +35,8 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label "新パスワード" %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label "新パスワード" %> <i>(6文字以上)</i><br />
     <%= f.password_field :password, autocomplete: "off", placeholder: "パスワードを変更しない場合は空欄のまま", class: "form-control" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
   </div>
 
   <div class="form-group">
@@ -45,7 +45,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.label :current_password %> <i></i><br />
     <%= f.password_field :current_password, autocomplete: "off", placeholder: "変更を反映させるため、現行のパスワードを入力", class: "form-control" %>
   </div>
 
