--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -56,7 +56,7 @@
           
           <%= form_for(resource, as: resource_name, url: session_path(resource_name), html: {class: 'form-inline'}) do |f| %>
 
-            <li class="form-group"><%= f.email_field :email, autofocus: true, placeholder: "メールアドレス" %></li>
+            <li class="form-group"><%= f.email_field :email, autocomplete: true, placeholder: "メールアドレス" %></li>
             <li class="form-group"><%= f.password_field :password, autocomplete: "off", placeholder: "パスワード" %></li>
             <li class="form-group"><%= f.submit "ログイン" %></li>
             <li class="form-group hidden-xs disable"><a><span class="sen">／</span></a></li>
