--- a/app/views/layouts/dropdown/_message_notifications.html.erb
+++ b/app/views/layouts/dropdown/_message_notifications.html.erb
@@ -1,6 +1,6 @@
 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
     
-    <i class="fa fa-envelope"></i> <span id="unreadmessage"><%= @notifications_messages_count %></span> <span class="caret"></span>
+    <i class="fa fa-envelope"></i> <span id="unreadmessage"><%= @notifications_messages_count %></span>
     
 </a>
 <ul class="dropdown-menu">
