--- a/app/views/layouts/dropdown/_notifications.html.erb
+++ b/app/views/layouts/dropdown/_notifications.html.erb
@@ -1,6 +1,6 @@
 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
     
-    <i class="fa fa-comments"></i> <span id="unreadcount"><%= @notifications_count %></span> <span class="caret"></span>
+    <i class="fa fa-comments"></i> <span id="unreadcount"><%= @notifications_count %></span>
     
 </a>
 <ul class="dropdown-menu">
