--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -42,7 +42,8 @@
 </div>
 <br>
 <div class="row">
-<%= form_for [@conversation, @message], html: {class: 'form-horizontal'} do |f| %>
+  
+<%= form_for [@conversation, @message], remote: true,html: {class: 'form-horizontal'} do |f| %>
   <div class="field">
     <%= f.text_area :body, class: "form-control" %>
   </div>
