--- a/public/404.html.erb
+++ b/public/404.html.erb
@@ -19,9 +19,11 @@
 
 <body>
   <!-- This file lives in public/404.html -->
-  <div class="error" style="background-image: image-url("404.png");">
-  </div>
+  <div class="error">
+    <img src="<%= asset_path "404.png" %>" />
     <h1>お探しのページは見つかりません。</h1>
     <p>不正なページ遷移です。<br>指定したページURLに入力間違いがないか、再度ご確認ください。</p>
+  </div>
+
 </body>
 </html>
