--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,3 +25,5 @@
     <%= f.submit "アカウント登録", class: "btn btn-success" %>
   </div>
 <% end %>
+
+<%= link_to ">>ユーザー登録確認メール届いていませんか？", new_confirmation_path(resource_name) %><br>
