topic.show.html修正

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -20,7 +20,7 @@
     </div>
   </div>
   
-  <div class="row" style="padding:0 0 0 5px;">
+  <div class="row" style="padding:0 0 0 5px; word-wrap:break-word;">
     <div class="col-sm-1">
       <%= simple_format(@topic.content) %>
     </div>
