--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="row">
     <div class="row user-list" style="background-color:white;border:1px solid #ddd; padding: 5px;">
-    <% @users.each do |user| %>
+    <% @users.order("id ASC").each do |user| %>
       <% if user != current_user %>
       <div class="row" style="margin: 5px 0 5px 0; border:0.1px solid #ddd">
         <div class="col-sm-2" style="padding: 0;">
