--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -5,23 +5,19 @@
   <%= f.hidden_field :reset_password_token %>
 
   <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+    <%= f.label :password, "新パスワード" %><br />
+    <%= f.password_field :password, autofocus: true, autocomplete: "off", placeholder: "パスワード(6文字以上)", class: "form-control"  %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.label :password_confirmation, "パスワード(確認用再入力)" %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "off", 
+    placeholder: "確認用パスワード（再度パスワードを入力ください)", class: "form-control"  %>
   </div>
 
   <div class="actions">
     <%= f.submit "パスワード変更" %>
   </div>
 <% end %>
-
-<%= link_to ">>アカウント新規登録", new_registration_path(resource_name) %>
 
 <%= render "devise/shared/links" %>
