--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -13,26 +13,30 @@
     <% if message.body %>
       <% user = User.find(message.user_id) %>
       <% if user != current_user %>
-      <div class="row" style="margin: 5px 0 5px 0; border:0.1px solid #ddd">
+      <div class="row" style="margin: 5px 0 5px 0;">
+        <div class="col-sm-9" style="border:0.1px solid #ddd">
         <div class="col-sm-2" style="padding: 0;">
-          <%= profile_img_ratio(user, 50, 50) %>
+          <%= profile_img_width(user, 50) %>
         </div>
-        <div class="col-sm-8" style="padding: 0;">
+        <div class="col-sm-10" style="padding: 0;word-wrap:break-word;">
             <%= user.name %> | <%= message.time_format %><br>
             <%= message.body %>
         </div>
       </div>
+      </div>
       <% else %>
-      <div class="row" style="margin: 5px 0 5px 0; border:0.1px solid #ddd">
-
-        <div class="col-sm-offset-2 col-sm-8" style="padding: 0;text-align:right;">
+      <div class="row" style="margin: 5px 0 5px 0;">
+        <div class="col-xs-12 col-sm-offset-3 col-sm-9" style="border:0.1px solid #ddd;">
+        <div class="col-xs-12 col-sm-push-10 col-sm-2" style="padding: 0;">
+          <%= profile_img_width_right(user, 50) %>
+        </div>
+        
+        <div class="col-xs-12 col-sm-pull-2 col-sm-10" style="padding: 0;text-align: right;word-wrap:break-word;">
             <%= user.name %> | <%= message.time_format %><br>
-            <%= message.body %>
+            <%= simple_format(message.body, :align => "left") %>
+        </div>
         </div>
 
-        <div class="col-sm-2" style="padding: 0;text-align:right;">
-          <%= profile_img_ratio(user, 50, 50) %>
-        </div>
       </div>
       <% end %>
     <% end %>
