comment投稿部分view修正

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,9 +11,9 @@
     </div>
   <% end %>
 
-
+  <div class="row" style="padding:5px;">
   <div class="from-group">
-    <div class="field col-sm-1 control-label hidden-xs" style="padding:3px 0 0 0;">
+    <div class="field col-sm-1 control-label hidden-xs" style="padding:3px 0 0 25px;">
       <%= profile_img_width(current_user, 30) %>
     </div>
     <div class="field col-sm-9" style="padding:3px 0 0 5px;">
@@ -22,6 +22,7 @@
     <div class="actions col-sm-1 control-label" style="padding:4px 0 0 3px;">
       <%= f.submit '投稿する' %>
     </div>
+  </div>
   </div>
   
   
