--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -47,7 +47,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "ユーザー設定", edit_user_registration_path %></li>
-              <li><%= link_to "管理画面", "#" %></li>
+              <li><%= link_to "管理画面", rails_admin_path %></li>
               <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
             </ul>
           </li>
