--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -27,6 +27,14 @@
   </div>
 </div>
 <div class="row" style="background-color:#f5f5f5;border:1px solid #ddd;border-top:0px;">
+  <% @comments = @topic.comments %>
+  <% if @comments.length > 2 %>
+    <% @comments = @comments[-2..-1] %>
+    <% @excess = true %>
+  <% else %>
+  <% @excess = false %>
+  <% end %>
+  
   <div id="comments_area">
       <%= render partial: 'comments/index', locals: { comments: @comments, topic: @topic } %>
   </div>
