--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -13,14 +13,17 @@
 
   <div class="row" style="padding:5px;">
   <div class="from-group">
-    <div class="field col-sm-1 control-label hidden-xs" style="padding:3px 0 0 25px;">
+    <div class="field col-sm-1 control-label hidden-xs" style="padding:0px 0 0 25px;">
       <%= profile_img_width(current_user, 30) %>
     </div>
-    <div class="field col-sm-9" style="padding:3px 0 0 5px;">
+    
+    <div class="field col-sm-9" style="padding:0px 15px 0 15px;">
       <%= f.text_area :content, rows: 1, placeholder: "コメントする", class: 'form-control' %>
     </div>
-    <div class="actions col-sm-1 control-label" style="padding:4px 0 0 3px;">
+    <div class="container">
+    <div class="col-sm-1" style="padding:0 0 0 0;">
       <%= f.submit '投稿する' %>
+    </div>
     </div>
   </div>
   </div>
