--- a/app/views/relationships/destroy.js.erb
+++ b/app/views/relationships/destroy.js.erb
@@ -1,1 +1,2 @@
 $("#follow_form_"+"<%= @user.id %>").html("<%= escape_javascript(render partial: 'users/follow_form', locals: { user: @user } ) %>")
+$("#leftnavi_area").html("<%= escape_javascript(render partial: 'layouts/leftnavi') %>")
