--- a/app/views/layouts/_leftnavi.html.erb
+++ b/app/views/layouts/_leftnavi.html.erb
@@ -4,7 +4,7 @@
     <% if followed_eachother.name %>
     <div class="row">
         <div class="col-sm-4">
-            <%= profile_img_height(followed_eachother, 50,) %>
+            <%= profile_img_width(followed_eachother, 50,) %>
         </div>
         <div class="col-sm-8" style="padding: 0;">
             <%= followed_eachother.name %><br>
