--- a/app/views/topics/_index.html.erb
+++ b/app/views/topics/_index.html.erb
@@ -4,7 +4,7 @@
   
   <div class="row" style="padding:5px;">
     <div class="col-sm-1 control-label" style="padding:3px 0 0 15px;">
-      <%= profile_img_ratio(topic.user, 40, 40) %>
+      <%= profile_img_width(topic.user, 40) %>
     </div>
     <div class="col-sm-10">
       <%= topic.user.name + "さんがトピックを作成しました。" %></br>
