自分のトピックに自分がコメントしても通知がこないようにした

--- a/app/views/layouts/_leftnavi.html.erb
+++ b/app/views/layouts/_leftnavi.html.erb
@@ -3,7 +3,7 @@
 <% @followed_eachothers.each do |followed_eachother| %>
     <% if followed_eachother.name %>
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-4" style="margin-bottom: 1px;">
             <%= profile_img_width(followed_eachother, 50,) %>
         </div>
         <div class="col-sm-8" style="padding: 0;">
