--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -33,7 +33,7 @@
         
         <div class="col-xs-12 col-sm-pull-2 col-sm-10" style="padding: 0;text-align: right;word-wrap:break-word;">
             <%= user.name %> | <%= message.time_format %><br>
-            <%= simple_format(message.body, :align => "left") %>
+            <%= simple_format(message.body, :align => "right") %>
         </div>
         </div>
 
